first page complete

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz_Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <span class="name">QUIZILLA</span>
+        <div class="btn">
+            <a href="/Quiz_Website/firstpage.html"><button onclick="MyFunction">START QUIZ</button></a>
+        </div>
+    </div>
+
     
 </body>
+<script src="/Quiz_Website/script.js"></script>
 </html>
