--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <span class="name">QUIZILLA</span>
         <div class="btn">
             <a href="/Quiz_Website/firstpage.html"><button onclick="MyFunction">START QUIZ</button></a>
