--- a/firstpage.html
+++ b/firstpage.html
@@ -5,188 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz_Website</title>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0rem;
-            padding: 0rem;
-
-        }
-
-        body {
-            background-image: linear-gradient(skyblue, rgb(42, 147, 182), rgb(27, 172, 148));
-            height: 100vh;
-            width: 100vw;
-        }
-
-        .information {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-
-        }
-
-        .text {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .text input {
-            margin: 1rem 2rem;
-            padding: 1rem 1rem;
-            height: 2rem;
-            border-radius: 2rem;
-            background-color: rgb(161, 240, 240);
-            border: 2px solid aqua;
-        }
-
-        .regi {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            align-self: center;
-            font-weight: bolder;
-            font-size: 3rem;
-            width: 100vw;
-        }
-
-        .btn1 {
-            margin: 2rem;
-            height: 5vh;
-            width: 6vw;
-            border-radius: 2rem;
-            margin: 2rem 1rem;
-            cursor: pointer;
-            background-color: aqua;
-            border: 2px solid aqua;
-            color: black;
-            font-size: 1rem;
-        }
-
-        .btn1:hover {
-            background-color: black;
-            color: aqua;
-        }
-
-        @media (max-width:800px) and (min-width:300px) {
-            .regi {
-                font-size: 2rem;
-            }
-
-            .information {
-                height: 90vh;
-            }
-
-            .btn1 {
-                width: 5rem;
-            }
-        }
-
-        @media (max-width:295px) {
-            .regi {
-                font-size: 1.5rem;
-            }
-
-            .btn1 {
-                width: 5rem;
-            }
-        }
-
-        .instruction {
-            display: flex;
-            flex-wrap: wrap;
-            position: absolute;
-            top: 0%;
-            left: 0%;
-            background-image: url('/Quiz_Website/simple-blue-background-free-vector.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            height: 100vh;
-            width: 100vw;
-            color: white;
-            background-color: antiquewhite;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 2rem;
-            opacity: 0;
-            pointer-events: none;
-            transition: .3s ease;
-
-        }
-
-        @media (max-width:800px) and (min-width:300px) {
-            .instruction {
-                height: 150vh;
-                width: 133vw;
-            }
-
-            .information{
-                height: 100vh;
-            }
-
-
-        }
-
-        @media (max-width:295px) {
-            .instruction {
-                height: 133vh;
-                width: 133vw;
-            }
-        }
-
-        .instruction.active {
-            opacity: 1;
-            pointer-events: auto;
-        }
-
-        .btn-group {
-            margin: 2rem;
-        }
-
-        .info-btn_exit-btn {
-            margin: 0rem 7rem;
-            padding: 1rem 2.5rem;
-            font-size: 1rem;
-            background-color: skyblue;
-            border-radius: 0.5rem;
-            color: white;
-            border: 2px solid white;
-            cursor: pointer;
-        }
-
-        .info-btn_continue-btn {
-            margin: 8rem 7rem;
-            padding: 0.5rem 1rem;
-            font-size: 2rem;
-            text-decoration: none;
-            color: white;
-            background-color: skyblue;
-            border-radius: 0.5rem;
-            border: 2px solid white;
-            cursor: pointer;
-
-        }
-
-        .info-btn_continue-btn:hover {
-            background-color: rgb(8, 69, 100);
-            transform: translateY(5px);
-            box-shadow: 0px 2px 3px 6px skyblue;
-
-        }
-
-        .info-btn_exit-btn:hover {
-            background-color: rgb(8, 69, 100);
-            transform: translateY(5px);
-            box-shadow: 0px 2px 3px 6px skyblue;
-
-        }
-    </style>
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
