all things are completed in Quiz website

--- a/firstpage.html
+++ b/firstpage.html
@@ -15,7 +15,7 @@
             Register yourself here!
         </div>
         <div class="text">
-            <input type="text" name="text" id="Firestname" placeholder="FIRST NAME">
+            <input type="text" name="text" id="Firstname" placeholder="FIRST NAME">
             <input type="text" name="text" id="Lastname" placeholder="LAST NAME">
         </div>
 
@@ -37,15 +37,15 @@
 
     <div class="instruction">
         <h2>Quiz Guide</h2>
-        <span class="info">1. Lorem ipsum dolor sit amet.</span>
-        <span class="info">2. Lorem ipsum dolor sit amet consectetur.</span>
-        <span class="info">3. Lorem, ipsum.</span>
-        <span class="info">4. Lorem ipsum dolor sit amet consectetur.</span>
-        <span class="info">5. Lorem ipsum, dolor sit amet consectetur adipisicing.</span>
+        <span class="info">1. This quiz game contains 6 questions.</span>
+        <span class="info">2. If the answer is correct then score will +5.</span>
+        <span class="info">3. If the answer is wrong then score will be -1.</span>
+        <span class="info">4. Each question has 10 seconds.</span>
+        <span class="info">5. All the best.</span>
 
         <div class="btn-group">
             <button onclick="exit()" class="info-btn_exit-btn">Exit Quiz</button>
-            <a href="#" class="info-btn_continue-btn">Continue</a>
+            <a href="#" onclick="cont()" class="info-btn_continue-btn">Continue</a>
         </div>
     </div>
     <script src="/Quiz_Website/script.js"></script>
