--- a/Quiz_question.html
+++ b/Quiz_question.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz_Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
+        
         <div id="quiz-section">
+            <div class="timer">Timer: <span id="countdown">10</span></div>
             <h2 class="question" id="question">Quiz question</h2>
             <hr>
             <ul>
-                <li><input type="radio" name="answer" class="answer"  id="a">
-                <label for="a" class="option" id="option_1">Quiz option</label>
+                <li><input type="radio" name="answer" class="answer" id="a">
+                    <label for="a" class="option" id="option_1">Quiz option</label>
                 </li>
-                <li><input type="radio" name="answer" class="answer"  id="b">
-                <label for="b" class="option" id="option_2">Quiz option</label>
+                <li><input type="radio" name="answer" class="answer" id="b">
+                    <label for="b" class="option" id="option_2">Quiz option</label>
                 </li>
-                <li><input type="radio" name="answer" class="answer"  id="c">
-                <label for="c" class="option" id="option_3">Quiz option</label>
+                <li><input type="radio" name="answer" class="answer" id="c">
+                    <label for="c" class="option" id="option_3">Quiz option</label>
                 </li>
-                <li><input type="radio" name="answer" class="answer"  id="d">
-                <label for="d" class="option" id="option_4">Quiz option</label>
+                <li><input type="radio" name="answer" class="answer" id="d">
+                    <label for="d" class="option" id="option_4">Quiz option</label>
                 </li>
             </ul>
             <hr>
@@ -32,8 +36,7 @@
             </div>
         </div>
     </div>
-
-    
     <script src="script.js"></script>
 </body>
+
 </html>
