--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz_Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="container" id="container">
         <span class="name">QUIZILLA</span>
         <div class="btn">
-            <a href="/Quiz_Website/firstpage.html"><button onclick="MyFunction">START QUIZ</button></a>
+            <button id="start" onclick="MyFunction();">START QUIZ</button>
         </div>
     </div>
 
