--- a/firstpage.html
+++ b/firstpage.html
@@ -48,7 +48,7 @@
             <a href="#" onclick="cont()" class="info-btn_continue-btn">Continue</a>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
