Adding more questions

--- a/firstpage.html
+++ b/firstpage.html
@@ -29,19 +29,23 @@
             <input type="text" name="text" id="State" placeholder="YOUR STATE">
         </div>
         <div class="text">
-            <button type="submit" class="btn1" onclick="text()">SUBMIT</button>
             <button type="reset" value="reset now" class="btn1" onclick="text">RESET</button>
+            <button type="submit" class="btn1" onclick="text()">SUBMIT</button>
         </div>
 
     </div>
 
     <div class="instruction">
         <h2>Quiz Guide</h2>
-        <span class="info">1. This quiz game contains 6 questions.</span>
-        <span class="info">2. If the answer is correct then score will +5.</span>
-        <span class="info">3. If the answer is wrong then score will be -1.</span>
-        <span class="info">4. Each question has 10 seconds.</span>
-        <span class="info">5. All the best.</span>
+        <div class="infoo">
+            <span class="info">1. This quiz game contains 6 questions.</span>
+            <span class="info">2. If the answer is correct then score will +5.</span>
+            <span class="info">3. If the answer is wrong then score will be -1.</span>
+            <span class="info">4. Each question has 10 seconds.</span>
+            <span class="info">5. All the best.</span>
+        </div>
+       
+        
 
         <div class="btn-group">
             <button onclick="exit()" class="info-btn_exit-btn">Exit Quiz</button>
