--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz_Website</title>
-    <link rel="icon" href="images-removebg-preview.png">
+    <link rel="icon" href="/simple-blue-background-free-vector.jpg">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
+    
 </head>
 <body>
     <div class="container" id="container">
