--- a/firstpage.html
+++ b/firstpage.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<form>
     <div class="information">
         <div class="regi">
             Register yourself here!
@@ -34,6 +34,8 @@
         </div>
 
     </div>
+</form>
+    
 
     <div class="instruction">
         <h2>Quiz Guide</h2>
