--- a/firstpage.html
+++ b/firstpage.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<form>
+<form onsubmit="text()">
     <div class="information">
         <div class="regi">
             Register yourself here!
@@ -29,8 +29,8 @@
             <input type="text" name="text" id="State" placeholder="YOUR STATE">
         </div>
         <div class="text">
-            <button type="reset" value="reset now" class="btn1" onclick="text">RESET</button>
-            <button type="submit" class="btn1" onclick="text()">SUBMIT</button>
+            <button type="button" value="reset now" class="btn1">RESET</button>
+            <button type="submit" class="btn1">SUBMIT</button>
         </div>
 
     </div>
