--- a/Quiz_question.html
+++ b/Quiz_question.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container2">
         
         <div id="quiz-section">
             <div class="timer">Timer: <span id="countdown">10</span></div>
