--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz_Website</title>
-    <link rel="icon" href="/simple-blue-background-free-vector.jpg">
+    <link rel="icon" href="images-removebg-preview.png">
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
     <div class="container" id="container">
         <span class="name">QUIZILLA</span>
@@ -16,7 +18,8 @@
         </div>
     </div>
 
-    
+
 </body>
 <script src="script.js"></script>
+
 </html>
