changes design of information

--- a/firstpage.html
+++ b/firstpage.html
@@ -19,9 +19,12 @@
         </div>
         <div class="text">
             <input type="text" name="text" id="Firstname" placeholder="FIRST NAME">
-            <input type="text" name="text" id="Lastname" placeholder="LAST NAME">
+          
         </div>
 
+        <div class="text">
+            <input type="text" name="text" id="Lastname" placeholder="LAST NAME">
+        </div>
         <div class="text">
             <input type="number" name="number" id="number" placeholder="PHONE NUMBER" value="onchange">
         </div>
